--- a/app/src/main/res/layout/activity_budget_control.xml
+++ b/app/src/main/res/layout/activity_budget_control.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:gravity="center_horizontal"
     android:background="#CCE5FF"
-    tools:context="zhe.charmu.BudgetControlActivity">
+    tools:context="zhe.charmu.BudgetControl.BudgetControlActivity">
 
     <Space
         android:layout_width="1dp"
