--- a/app/src/main/res/layout/activity_set_budget.xml
+++ b/app/src/main/res/layout/activity_set_budget.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:gravity="center_horizontal"
     android:background="#E5FFCC"
-    tools:context="zhe.charmu.SetBudgetActivity">
+    tools:context="zhe.charmu.BudgetControl.SetBudgetActivity">
 
     <Space
         android:layout_width="1dp"
