--- a/app/src/main/res/layout/activity_show_body_metrics_tendency.xml
+++ b/app/src/main/res/layout/activity_show_body_metrics_tendency.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="zhe.charmu.ShowBodyMetricsTendency">
+    tools:context="zhe.charmu.metricstendency.ShowBodyMetricsTendency">
 
     <TextView
         android:id="@+id/tv_tendency_title"
