--- a/app/src/main/res/layout/activity_update_body_metrics.xml
+++ b/app/src/main/res/layout/activity_update_body_metrics.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:gravity="center_horizontal"
     android:background="#E5FFCC"
-    tools:context="zhe.charmu.UpdateBodyMetricsActivity">
+    tools:context="zhe.charmu.bodymetrics.UpdateBodyMetricsActivity">
 
     <Space
         android:layout_width="1dp"
