--- a/app/src/main/res/layout/activity_review_budget_detail.xml
+++ b/app/src/main/res/layout/activity_review_budget_detail.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="zhe.charmu.BudgetControl.ReviewBudgetDetail">
+    tools:context="zhe.charmu.budgetcontrol.ReviewBudgetDetail">
 
     <Space
         android:layout_width="1dp"
