--- a/app/src/main/res/layout/activity_step.xml
+++ b/app/src/main/res/layout/activity_step.xml
@@ -8,14 +8,13 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="zhesong.madcourse.neu.edu.charmingu.MainActivity"
+    tools:context="zhe.charmu.MainActivity"
     android:orientation="vertical"
     android:weightSum="1">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/current_step"
         android:textAppearance="@style/TextAppearance.AppCompat.Display2"
         android:textSize="28sp"
         android:textColor="@android:color/background_dark"
