--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,9 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="control_padding">20dp</dimen>
+    <dimen name="elevation_low">4dp</dimen>
+    <dimen name="logo_hight">90dp</dimen>
+    <dimen name="log_width">90dp</dimen>
 </resources>
