--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,7 +10,7 @@
     <style name="DialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
         <item name="colorAccent">#FF69B4</item>
         <item name="android:textColorPrimary">#4C0099</item>
-        <item name="android:windowBackground">@drawable/mdialog</item>
+       <!-- <item name="android:windowBackground">@drawable/mdialog</item> -->
     </style>
 
 </resources>
